--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "vite"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "yup": "^1.6.1"
   },
